--- a/Frontend/src/Components/Team.css
+++ b/Frontend/src/Components/Team.css
@@ -4,6 +4,7 @@
           padding: 10px;
           box-shadow: 0px 0px 35px #FF6A00; 
           border-radius: 100px;
+          cursor: grab;
 }
 
 
