--- a/Frontend/src/app/App.css
+++ b/Frontend/src/app/App.css
@@ -1,5 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Sancreek&display=swap');
+/* For WebKit browsers */
+::-webkit-scrollbar {
+  width: 4px; /* Width of the vertical scrollbar */
+  height: 4px; /* Height of the horizontal scrollbar */
+}
 
+::-webkit-scrollbar-track {
+  background: #eaeaea00; /* Background of the scrollbar track */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgb(241, 109, 0); /* Color of the scrollbar thumb */
+  border-radius: 10px; /* Rounded corners for the thumb */
+}
+
+/* App and body styles */
 App {
   width: 100vw;
   height: 100vh;
@@ -10,24 +24,8 @@ App {
 body {
   background-color: #110011;
   color: white;
-}
-
-/* Custom Scrollbar for WebKit browsers */
-::-webkit-scrollbar {
-  width: 4px; /* Set the thickness of the scrollbar */
-  background-color: #11001100; /* Background of the scrollbar */
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: rgb(255, 142, 3); /* Color of the scrollbar */
-  border-radius: 10px; /* Rounded edges of the scrollbar */
-}
-
-
-/* Custom Scrollbar for Firefox */
-body {
-  scrollbar-width: thin; /* Make scrollbar thinner */
-  scrollbar-color: rgb(255, 115, 0) #eaeaea00; /* Set scrollbar thumb and track color */
+  scrollbar-width: 4px; /* Firefox scrollbar width */
+  scrollbar-color: rgb(241, 109, 0) #eaeaea00; /* Firefox scrollbar color */
 }
 
 h1 {
