--- a/Frontend/src/Components/Intro.css
+++ b/Frontend/src/Components/Intro.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=La+Belle+Aurore&family=Sancreek&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=La+Belle+Aurore&family=Sancreek&display=swapz');
 body{
           margin: 0;
           padding: 0;
