--- a/Frontend/src/app/App.css
+++ b/Frontend/src/app/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Sancreek&display=swap');
+
 /* For WebKit browsers */
 ::-webkit-scrollbar {
   width: 4px; /* Width of the vertical scrollbar */
@@ -32,4 +34,11 @@ h1 {
   font-family: "Sancreek", serif;
   font-weight: 400;
   font-style: normal;
+}
+
+.shad{
+  border: 0px solid;
+  padding: 10px;
+  box-shadow: 0px 0px 35px #FF6A00; 
+  border-radius: 50px;
 }
